# loggy

./: Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: log.rs  main.rs  tee.rs  util.rs
